feat: update readme

--- a/DashboardWolverine/WolverineFx.Dashboard.csproj
+++ b/DashboardWolverine/WolverineFx.Dashboard.csproj
@@ -17,9 +17,9 @@
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageIcon>icon.png</PackageIcon>
 		<!-- Embed wwwroot files -->
 		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+		<IsPackable>true</IsPackable>
 
 
 	</PropertyGroup>
@@ -42,7 +42,6 @@
 	<!-- Include README and icon in package -->
 	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="\" />
-		<None Include="icon.png" Pack="true" PackagePath="\" Condition="Exists('icon.png')" />
 	</ItemGroup>
 
 	<ItemGroup>
